data/derived/fa15/progs/unify/prog2173.ml.out
Characters 142-151:
  if r = 0 then buildSine
                ^^^^^^^^^
Error: This expression has type expr -> expr
       but an expression was expected of type unit -> expr
       Type expr is not compatible with type unit 
